<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_visit2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="**During week 8-12**"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Goals"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit1Goals"
        android:textSize="20dp"
        android:textColor="#414040"

        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="History"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit1History"
        android:textSize="20dp"
        android:textColor="#414040"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Examination"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit1Examination"
        android:textSize="20dp"
        android:textColor="#414040"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Screening and Tests"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit1screening_test"
        android:textSize="20dp"
        android:textColor="#414040"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Treatments"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit1Treatments"
        android:textSize="20dp"
        android:textColor="#414040"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Preventive Measures"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit1PreventiveMeasures"
        android:textSize="20dp"
        android:textColor="#414040"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Health education and counselling"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit1HealthEducation"
        android:textSize="20dp"
        android:textColor="#414040"
        />
</LinearLayout>
    </ScrollView>

</LinearLayout>