<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_risk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.anc.codegurus.pregacare.ActivityRisk">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="**Risk Factors**"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/riskIntro"
        android:textSize="20dp"
        android:textColor="#414040"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Maternal Age"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/riskMaternalAge"
        android:textSize="20dp"
        android:textColor="#414040"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Blood Pressure"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/riskBloodPressure"
        android:textSize="20dp"
        android:textColor="#414040"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Preeclampsia"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/riskPreeclampsia"
        android:textSize="20dp"
        android:textColor="#414040"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tetanus Toxoid"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/riskTetnusToxide"
        android:textSize="20dp"
        android:textColor="#414040"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="STD"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/riskSTD"
        android:textSize="20dp"
        android:textColor="#414040"
        />

    </LinearLayout>


    </ScrollView>

</LinearLayout>
